LICENSE
Python 3.7.4 (tags/v3.7.4:e09359112e, Jul  8 2019, 20:34:20) [MSC v.1916 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license()" for more information.
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
>>> 
>>> import pandas as pd
>>> people = [['Louis', 25, 'ENB'], ['Bob', 29, 'WHP']]
>>> df = pd.DataFrame(people)
>>> df.to_csv('C:\\test.csv')
Traceback (most recent call last):
  File "<pyshell#5>", line 1, in <module>
    df.to_csv('C:\\test.csv')
  File "C:\Users\Sandra Dapal\AppData\Local\Programs\Python\Python37\lib\site-packages\pandas\core\generic.py", line 3228, in to_csv
    formatter.save()
  File "C:\Users\Sandra Dapal\AppData\Local\Programs\Python\Python37\lib\site-packages\pandas\io\formats\csvs.py", line 183, in save
    compression=self.compression,
  File "C:\Users\Sandra Dapal\AppData\Local\Programs\Python\Python37\lib\site-packages\pandas\io\common.py", line 399, in _get_handle
    f = open(path_or_buf, mode, encoding=encoding, newline="")
PermissionError: [Errno 13] Permission denied: 'C:\\test.csv'
>>> df.to_csv('C:\\myapps\\test.csv')
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
Traceback (most recent call last):
  File "C:\myapps\colorex-git\app.py", line 7, in <module>
    engine = cx.ColorEx({'rgb': '4f8cf2'})
  File "C:\myapps\colorex-git\colorex\engines\colorex.py", line 25, in __init__
    self.default_rgb_code = options['default-rgb']
KeyError: 'default-rgb'
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
Traceback (most recent call last):
  File "C:\myapps\colorex-git\app.py", line 7, in <module>
    engine = cx.ColorEx({'default-rgb': '4f8cf2'})
  File "C:\myapps\colorex-git\colorex\engines\colorex.py", line 26, in __init__
    self.rgb_color_codes = options['rgbs']
KeyError: 'rgbs'
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
Traceback (most recent call last):
  File "C:\myapps\colorex-git\app.py", line 1, in <module>
    import colorex as cx
  File "C:\myapps\colorex-git\colorex\__init__.py", line 22, in <module>
    from .engines import *
  File "C:\myapps\colorex-git\colorex\engines\__init__.py", line 21, in <module>
    from .colorex import *
  File "C:\myapps\colorex-git\colorex\engines\colorex.py", line 48
    finally:
          ^
SyntaxError: invalid syntax
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
Traceback (most recent call last):
  File "C:\myapps\colorex-git\app.py", line 1, in <module>
    import colorex as cx
  File "C:\myapps\colorex-git\colorex\__init__.py", line 22, in <module>
    from .engines import *
  File "C:\myapps\colorex-git\colorex\engines\__init__.py", line 21, in <module>
    from .colorex import *
  File "C:\myapps\colorex-git\colorex\engines\colorex.py", line 45
    new_tile = self.__generate_tile(row[item],
                                             ^
IndentationError: unindent does not match any outer indentation level
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
Traceback (most recent call last):
  File "C:\myapps\colorex-git\app.py", line 3, in <module>
    f = cx.CSVReader('web_traffic.csv')
  File "C:\myapps\colorex-git\colorex\readers\CSVReader.py", line 31, in __init__
    self.read()
  File "C:\myapps\colorex-git\colorex\readers\CSVReader.py", line 52, in read
    with open(filepath) as csv_file:
FileNotFoundError: [Errno 2] No such file or directory: 'web_traffic.csv'
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
Traceback (most recent call last):
  File "C:\myapps\colorex-git\app.py", line 7, in <module>
    engine = cx.ColorEx({'default-rgb': '00ffaa'})
  File "C:\myapps\colorex-git\colorex\engines\colorex.py", line 26, in __init__
    self.rgb_color_codes = options['rgbs']
KeyError: 'rgbs'
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
=================== RESTART: C:\myapps\colorex-git\app.py ===================
>>> 
